docs: update technical accuracy and nuance in AI whitepaper
- Change MCP from "critical standard" to "emerging / early standard"
- Replace benchmark table with nuanced performance characteristics table for Project Babylon
- Add note that Spring AI 2.0 is suitable for controlled production pilots
- Update cost reduction figures to reflect ranges (40-80%) instead of fixed 78%
- Remove "Architect's Review & Validation" section to avoid overclaiming
- Adjust language to be more precise about production readiness